Backend/error.txt
node : file:///C:/pr
oject/Imagescratch/b
ackend/server.js:10
At line:1 char:1
+ node server.js 
2>&1 | Out-File 
-Encoding utf8 
error.txt
+ 
~~~~~~~~~~~~~~~~~~~
    + CategoryInfo  
            : NotS  
  pecified: (file   
 :///C:/proj...n    
d/server.js:10:    
String) [], Rem    
oteException
    + FullyQualifie 
   dErrorId : Nati  
  veCommandError
 
import { 
clerkMiddleware } 
from "@clerk/clerk-s
dk-node";
         
^^^^^^^^^^^^^^^
SyntaxError: The 
requested module '@c
lerk/clerk-sdk-node'
 does not provide 
an export named 
'clerkMiddleware'
    at ModuleJob._in
stantiate (node:inte
rnal/modules/esm/mod
ule_job:228:21)
    at async 
ModuleJob.run (node:
internal/modules/esm
/module_job:337:5)
    at async onImpor
t.tracePromise.__pro
to__ (node:internal/
modules/esm/loader:6
51:26)
    at async asyncRu
nEntryPointWithESMLo
ader (node:internal/
modules/run_main:117
:5)

Node.js v22.19.0
